[MODORDERS-1209]. Fix sonar issue, change log level